[tool.poetry]
name = "srai-store"
version = "0.1.2"
description = ""
authors = ["Jaap Oosterbroek <jaap.oosterbroek@gmail.com>"]
readme = "README.md"
packages = [{include = "srai_store"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
langchain-core = "^0.2.0"
openai = "^1.0.0"
pillow = "^10.0.0"
requests = "^2.32.5"
pydantic = "^2.0.0"
boto3 = "^1.42.18"
pymongo = "^4.6.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Enable a comprehensive set of linting rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "PD",  # pandas-vet
    "PL",  # Pylint
    "TRY", # tryceratops
    "RUF", # Ruff-specific rules
]
ignore = [
    # E501 is not ignored - we enforce 140 char limit via max-line-length
    "PLR0913", # Too many arguments
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements
    "ARG002", #unused arguments
    "TRY003" # long message in except block
]

# Set the maximum line length
line-length = 140

# Exclude common directories
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Use spaces for indentation
indent-style = "space"
# Respect magic trailing comma (don't skip them)
skip-magic-trailing-comma = false

[tool.ruff.lint.pycodestyle]
# Set max-line-length for pycodestyle (E501) rule
max-line-length = 140

[tool.ruff.isort]
# Use known-first-party for your package
known-first-party = ["southriverblog"]
